<?xml version="1.0"?>
<package format="2">
  <name>pacmod3</name>
  <version>2.2.2</version>
  <description>AutonomouStuff PACMod v3 Driver Package</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/pacmod3</url>
  <url type="repository">https://github.com/astuff/pacmod3</url>
  <url type="bugtracker">https://github.com/astuff/pacmod3/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend version_gte="1.0.0" version_lt="1.1.0">pacmod3_msgs</depend>
  <depend>can_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
